Alignment-Correction

--- a/style.css
+++ b/style.css
@@ -1298,7 +1298,7 @@ textarea.form-control {
 
 @media (max-width: 992px) {
     .navbar {
-        padding: 15px 20px;
+        padding: 21px 20px;
     }
 
     .nav-links {
